[package]
name = "cblas"
version = "0.0.1"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides wrappers for CBLAS."
documentation = "https://docs.rs/cblas"
homepage = "https://github.com/stainless-steel/cblas"
repository = "https://github.com/stainless-steel/cblas"
readme = "README.md"

[dependencies]
cblas-sys = "0.1"
libc = "0.2"
num-complex = { version = "0.1", default-features = false }
