[package]
name = "cblas"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = [
    "Ivan Ukhov <ivan.ukhov@gmail.com>",
    "Toshiki Teramura <toshiki.teramura@gmail.com>",
]
description = "The package provides wrappers for CBLAS (C)."
documentation = "https://docs.rs/cblas"
homepage = "https://github.com/blas-lapack-rs/cblas"
repository = "https://github.com/blas-lapack-rs/cblas"
readme = "README.md"
categories = ["api-bindings", "science"]
keywords = ["linear-algebra"]

[dependencies]
cblas-sys = "0.2"
libc = "0.2"
num-complex = { version = "0.4", default-features = false }
